chore(git): ignorar dados locais e remover do versionamento
Ignora data/*, artefatos SQLite (*.db, *.db-*) e CSVs de reports. Mantém data/.gitkeep para preservar a estrutura de pastas. Remove do índice arquivos de dados já adicionados, mantendo-os no disco.

--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,14 @@ venv/
 .vscode/
 
 # Data
-/data/raw/
-/data/processed/
+# Ignorar dados locais e artefatos gerados
+/data/*
+!/data/.gitkeep
+
+# Bancos e artefatos de SQLite
+*.db
+*.db-shm
+*.db-wal
+
+# CSVs exportados
+/data/reports/
